# email_assistant

./: .gitignore  README.md  pyproject.toml  test.py
email_assistant/_vendor/simplegmail/: __init__.py  attachment.py  gmail.py  label.py  message.py
scripts/: init.ps1  init.sh
