[tool.poetry]
name = "email_assistant"
version = "0.1.0"
description = "Email Assistant can help you read, reply, and compose emails for you. It helps you to be a better communicator with less efforts."
authors = ["autom_admin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# autom = { git = "git@github.com:NaturaFlex/autom.git", branch = "main" }
autom = { path = "/home/steve/workspace/autom" }
google-api-python-client = "^2.146.0"
beautifulsoup4 = "^4.12.3"
python-dateutil = "^2.9.0.post0"
oauth2client = "^4.1.3"
lxml = "^5.3.0"

[tool.autom]
qualifier = "email_assistant"
name = "Email Assistant"
owner_qualifier = "steveflyer"
owner_email = "steveflyer7@gmail.com"
description = "Email Assistant can help you read, reply, and compose emails for you. It helps you to be a better communicator with less efforts."
python_version = "3.12"
python_version_spec = "^3.12"
publicity = "public"
github_repo_url = "https://github.com/stevieflyer/email_assistant.git"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"